--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <h1>H5P Accordion</h1>
+      <h1>Production Lab High Risk Audit Study Guide</h1>
       <p class="note">
         This page expects an unzipped H5P package in <code>./h5p/accordion</code> containing
         <code>h5p.json</code>, <code>content/</code>, and <code>libraries/</code>.
