--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <header>
       <h1>Production Lab High Risk Audit Study Guide</h1>
       <p class="note">
-        This page expects an unzipped H5P package in <code>./h5p/accordion</code> containing
-        <code>h5p.json</code>, <code>content/</code>, and <code>libraries/</code>.
+        Last Updated on 10/21/2025
       </p>
     </header>
 
