--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 
     <footer>
       <p>
-        Tip: If the H5P doesn’t appear after publishing to GitHub Pages, verify that your repository has a
-        <code>.nojekyll</code> file, and that your <code>h5p.json</code> is at <code>/h5p/accordion/h5p.json</code>.
+        This study guide is still in beta. Corrections and changes will be made.
       </p>
     </footer>
   </body>
