--- a/pages/horizontal.html
+++ b/pages/horizontal.html
@@ -19,7 +19,7 @@
     <h1>Horizontal Hood Airflow Diagram</h1>
 
     <figure>
-      <img src="/assets/images/lesson-1.jpg" alt="Descriptive alt text">
+      <img src="..assets/images/horizontal.jpg" alt=" ">
       <figcaption>Short caption for the image.</figcaption>
     </figure>
 
