--- a/pages/horizontal.html
+++ b/pages/horizontal.html
@@ -20,14 +20,12 @@
 
     <figure>
       <img src="../assets/images/horizontal.jpg" alt=" ">
-      <figcaption>Short caption for the image.</figcaption>
+      <figcaption> </figcaption>
     </figure>
 
     <div class="text">
-      <p>This is the small bit of text that used to be on your WordPress page.</p>
+      <p> </p>
     </div>
 
-    <a class="back" href="/"><span aria-hidden="true">←</span> Back to study guide</a>
-  </main>
 </body>
 </html>
