page/links/images update

--- a/pages/horizontal.html
+++ b/pages/horizontal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Horizontal Hood Airflow Diagram</title>
+  <title>Horizontal Hood Air Flow Diagram</title>
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; margin: 24px; line-height: 1.45; }
     .wrap { max-width: 920px; margin: 0 auto; }
@@ -16,7 +16,7 @@
 </head>
 <body>
   <main class="wrap">
-    <h1>Horizontal Hood Airflow Diagram</h1>
+    <h1>Horizontal Hood Air Flow Diagram</h1>
 
     <figure>
       <img src="../assets/images/horizontal.jpg" alt=" ">
