--- a/pages/nonhazvert.html
+++ b/pages/nonhazvert.html
@@ -19,15 +19,13 @@
     <h1>Non-Hazardous Vertical Hood Air Flow Diagram</h1>
 
     <figure>
-      <img src="/assets/images/lesson-1.jpg" alt="Descriptive alt text">
-      <figcaption>Short caption for the image.</figcaption>
+      <img src="../assets/images/nonhazvert.png" alt=" ">
+      <figcaption> </figcaption>
     </figure>
 
     <div class="text">
-      <p>This is the small bit of text that used to be on your WordPress page.</p>
+      <p> </p>
     </div>
 
-    <a class="back" href="/"><span aria-hidden="true">←</span> Back to study guide</a>
-  </main>
 </body>
 </html>
